# chameleon

./: .gitignore  .gitlab-ci-env.sh  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.org  CTestConfig.cmake  ChangeLog  LICENCE.txt  README.org  READMEDEV.org
coreblas/: CMakeLists.txt
coreblas/compute/: CMakeLists.txt  core_dlag2z.c  core_dzasum.c  core_ipiv_to_perm.c  core_zaxpy.c  core_zcesca.c  core_zctile.c  core_zctile_empty.c  core_zgeadd.c  core_zgelqt.c  core_zgemm.c  core_zgemv.c  core_zgeqrt.c  core_zgesplit.c  core_zgessm.c  core_zgessq.c  core_zgesum.c  core_zgetf2_nopiv.c  core_zgetrf.c  core_zgetrf_incpiv.c  core_zgetrf_nopiv.c  core_zgetrf_panel.c  core_zgram.c  core_zhe2ge.c  core_zhemm.c  core_zher2k.c  core_zherfb.c  core_zherk.c  core_zhessq.c  core_zlacpy.c  core_zlag2c.c  core_zlange.c  core_zlanhe.c  core_zlansy.c  core_zlantr.c  core_zlascal.c  core_zlaset.c  core_zlaset2.c  core_zlaswp.c  core_zlatm1.c  (+44 more)
coreblas/eztrace_module/: CMakeLists.txt  coreblas_eztrace_module  coreblas_tcore_eztrace_module
coreblas/include/: CMakeLists.txt  coreblas.h
cudablas/: CMakeLists.txt
cudablas/compute/: CMakeLists.txt  cuda_zgeadd.c  cuda_zgelqt.c  cuda_zgemerge.c  cuda_zgemm.c  cuda_zgeqrt.c  cuda_zgessm.c  cuda_zgetrf.c  cuda_zhemm.c  cuda_zher2k.c  cuda_zherfb.c  cuda_zherk.c  cuda_zlarfb.c  cuda_zlauum.c  cuda_zparfb.c  cuda_zpotrf.c  cuda_zssssm.c  cuda_zsymm.c  cuda_zsyr2k.c  cuda_zsyrk.c  cuda_ztpmlqt.c  cuda_ztpmqrt.c  cuda_ztrmm.c  cuda_ztrsm.c  cuda_ztrtri.c  cuda_ztslqt.c  cuda_ztsmlq.c  cuda_ztsmqr.c  cuda_ztsqrt.c  cuda_ztstrf.c  cuda_zttmlq.c  cuda_zttmqr.c  cuda_zunmlqt.c  cuda_zunmqrt.c  cudaglobal.c
cudablas/eztrace_module/: CMakeLists.txt  cudablas_eztrace_module
cudablas/include/: CMakeLists.txt  cudablas.h
doc/user/: CMakeLists.txt  chameleon.dot  homepage.org  news.org  publish.el  users_guide.org.in
example/basic_zposv/: CMakeLists.txt
example/lapack_to_chameleon/: CMakeLists.txt  CTestLists.cmake  lapack_to_chameleon.h  step0.c  step0.h  step1.c  step1.h  step2.c  step2.h  step3.c  step3.h  step4.c  step4.h  step5.c  step5.h  step6.c  step6.h  step7.c  step7.h
example/link_chameleon/: CMakeLists.txt  README.org  link_chameleon.c  link_chameleon.f90
example/mpi/: CMakeLists.txt  comm_split.c  comm_split.h
gpucublas/compute/: CMakeLists.txt  cuda_dlag2h.cu  cuda_gemmex.c  cuda_hgemm.c  cuda_zgeadd.c  cuda_zgelqt.c  cuda_zgemerge.c  cuda_zgemm.c  cuda_zgeqrt.c  cuda_zgessm.c  cuda_zgetrf.c  cuda_zhemm.c  cuda_zher2k.c  cuda_zherfb.c  cuda_zherk.c  cuda_zlag2c.cu  cuda_zlarfb.c  cuda_zlauum.c  cuda_zparfb.c  cuda_zpotrf.c  cuda_zssssm.c  cuda_zsymm.c  cuda_zsyr2k.c  cuda_zsyrk.c  cuda_ztpmlqt.c  cuda_ztpmqrt.c  cuda_ztrmm.c  cuda_ztrsm.c  cuda_ztrtri.c  cuda_ztslqt.c  cuda_ztsmlq.c  cuda_ztsmqr.c  cuda_ztsqrt.c  cuda_ztstrf.c  cuda_zttmlq.c  cuda_zttmqr.c  cuda_zunmlqt.c  cuda_zunmqrt.c  cudaglobal.c
gpucublas/include/: CMakeLists.txt  gpucublas.h
gpuhipblas/compute/: CMakeLists.txt  hip_hgemm.c  hip_zgemm.c  hip_zhemm.c  hip_zher2k.c  hip_zherk.c  hip_zsymm.c  hip_zsyr2k.c  hip_zsyrk.c  hip_ztrmm.c  hip_ztrsm.c  hipglobal.c
gpuhipblas/include/: CMakeLists.txt  gpuhipblas.h
hipblas/include/: CMakeLists.txt  hipblas.h
lapack_api/: CMakeLists.txt
lapack_api/include/: chameleon_lapack.h  lapack_api_common.h
lapack_api/src/: lapack_api_common.c  lapack_zgemm.c  lapack_zhemm.c  lapack_zher2k.c  lapack_zherk.c  lapack_zlacpy.c  lapack_zlange.c  lapack_zlanhe.c  lapack_zlansy.c  lapack_zlantr.c  lapack_zlaset.c  lapack_zlauum.c  lapack_zposv.c  lapack_zpotrf.c  lapack_zpotri.c  lapack_zpotrs.c  lapack_zsymm.c  lapack_zsyr2k.c  lapack_zsyrk.c  lapack_ztrmm.c  lapack_ztrsm.c  lapack_ztrtri.c
new-testing/: CMakeLists.txt  CTestLists.cmake  flops.h  parameters.c  run_list.c  testing_zauxiliary.c  testing_zauxiliary.h  testing_zcheck.c  testing_zcheck.h  testing_zgeadd.c  testing_zgelqf.c  testing_zgelqf_hqr.c  testing_zgelqs.c  testing_zgels.c  testing_zgels_hqr.c  testing_zgemm.c  testing_zgeqrf.c  testing_zgeqrf_hqr.c  testing_zgeqrs.c  testing_zgesv.c  testing_zgetrf.c  testing_zgetrs.c  testing_zhemm.c  testing_zher2k.c  testing_zherk.c  testing_zlacpy.c  testing_zlange.c  testing_zlanhe.c  testing_zlansy.c  testing_zlantr.c  testing_zlascal.c  testing_zlauum.c  testing_zposv.c  testing_zpotrf.c  testing_zpotri.c  testing_zpotrs.c  testing_zsymm.c  testing_zsyr2k.c  testing_zsyrk.c  testing_zsysv.c  (+16 more)
new-testing/input/: geadd.in  gelqf.in  gelqf_hqr.in  gelqs.in  gels.in  gels_hqr.in  gemm.in  geqrf.in  geqrf_hqr.in  geqrs.in  gesv.in  getrf.in  getrs.in  hemm.in  her2k.in  herk.in  lacpy.in  lange.in  lanhe.in  lansy.in  lantr.in  lascal.in  lauum.in  ongqr.in  orglq.in  orglq_hqr.in  orgqr.in  orgqr_hqr.in  ormlq.in  ormlq_hqr.in  ormqr.in  ormqr_hqr.in  posv.in  potrf.in  potri.in  symm.in  syr2k.in  syrk.in  sytrs.in  tradd.in  (+11 more)
runtime/: CMakeLists.txt
runtime/openmp/: CMakeLists.txt
runtime/parsec/: CMakeLists.txt
runtime/quark/: CMakeLists.txt
runtime/starpu/: CMakeLists.txt
simucore/: CMakeLists.txt
testing/: CMakeLists.txt  CTestLists.cmake  chameleon_testing.py  chameleon_ztesting.c  parameters.c  run_list.c  testing_dgram.c  testing_zauxiliary.c  testing_zauxiliary.h  testing_zcesca.c  testing_zcheck.c  testing_zcheck.h  testing_zcheck_aux.c  testing_zcheck_blas.c  testing_zcheck_facto.c  testing_zcheck_polar_decomp.c  testing_zcheck_qr_lq.c  testing_zcheck_svd.c  testing_zgeadd.c  testing_zgelqf.c  testing_zgelqf_hqr.c  testing_zgelqs.c  testing_zgels.c  testing_zgels_hqr.c  testing_zgels_systolic.c  testing_zgemm.c  testing_zgemm_batch.c  testing_zgenm2.c  testing_zgepdf_qdwh.c  testing_zgepdf_qr.c  testing_zgeqrf.c  testing_zgeqrf_hqr.c  testing_zgeqrf_qdwh.c  testing_zgeqrs.c  testing_zgesv.c  testing_zgesv_incpiv.c  testing_zgesv_nopiv.c  testing_zgesvd.c  testing_zgetrf.c  testing_zgetrf_nopiv.c  (+55 more)
testing/input/: cesca.in  geadd.in  gelqf.in  gelqf_hqr.in  gelqs.in  gels.in  gels_hqr.in  gemm.in  genm2.in  gepdf_qdwh.in  geqrf.in  geqrf_hqr.in  geqrs.in  gesv.in  gesv_nopiv.in  gesvd.in  (+46 more)
(+1322 files in other folders)
